# InfoFi

./: .gitignore  Cargo.toml  README.md  attestation.json  no_http_main.rs  package-lock.json  package.json  proof_server.js  verify_proof.js
smartcore-zk-ml/smartcore-zk-ml/: ml_inference_receipt.json  proof.json  proof.txt  true_save_ml_inference_receipt.json
smartcore-zk-ml/smartcore-zk-ml/host/: Cargo.toml
smartcore-zk-ml/smartcore-zk-ml/host/src/: main.rs
smartcore-zk-ml/smartcore-zk-ml/methods/guest/: Cargo.toml
smartcore-zk-ml/smartcore-zk-ml/methods/guest/src/: main.rs
src/: Iris  bonding_curves.json  datasets.json  main.rs
src/abi/: curve_abi.json  factory_abi.json
